add transform-react-jsx and update watch:example:js
`watch:example:js": "watchify -t babelify example/uppy-react.js -o
example/bundle.js -vd`

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-plugin-es6-promise": "1.0.0",
     "babel-plugin-transform-object-assign": "6.8.0",
     "babel-plugin-transform-proto-to-assign": "6.9.0",
+    "babel-plugin-transform-react-jsx": "6.23.0",
     "babel-polyfill": "6.9.1",
     "babel-preset-es2015": "6.13.2",
     "babel-preset-es2015-loose": "7.0.0",
@@ -112,7 +113,7 @@
     "watch": "npm-run-all --parallel watch:js watch:css",
     "watch:fast": "npm-run-all --parallel watch:css web:preview",
     "watch:example:browsersync": "browser-sync start --server example --port 3452 --serveStatic dist --files \"example/bundle.js, dist/uppy.min.css\"",
-    "watch:example:js": "watchify -t yo-yoify -t babelify example/main.js -o example/bundle.js -vd",
+    "watch:example:js": "watchify -t babelify example/uppy-react.js -o example/bundle.js -vd",
     "watch:example": "npm-run-all --parallel watch:example:js watch:css watch:example:browsersync",
     "web:build": "cd website && node update.js && ./node_modules/.bin/hexo generate --silent && node build-examples.js",
     "web:clean": "cd website && ./node_modules/.bin/hexo clean",
