more React + UppyDashboard experiments

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "3.16.1",
     "eslint-config-standard": "6.2.1",
     "eslint-plugin-promise": "3.4.2",
+    "eslint-plugin-react": "6.10.0",
     "eslint-plugin-standard": "2.0.1",
     "exorcist": "0.4.0",
     "fakefile": "0.0.8",
@@ -117,7 +118,7 @@
     "watch": "npm-run-all --parallel watch:js watch:css",
     "watch:fast": "npm-run-all --parallel watch:css web:preview",
     "watch:example:browsersync": "browser-sync start --server example --port 3452 --serveStatic dist --files \"example/bundle.js, dist/uppy.min.css\"",
-    "watch:example:js": "watchify -t babelify example/uppy-react.js -o example/bundle.js -vd",
+    "watch:example:js": "watchify -t babelify src/uppy-react/app.js -o example/bundle.js -vd",
     "watch:example": "npm-run-all --parallel watch:example:js watch:css watch:example:browsersync",
     "web:build": "cd website && node update.js && ./node_modules/.bin/hexo generate --silent && node build-examples.js",
     "web:clean": "cd website && ./node_modules/.bin/hexo clean",
