--- a/.eslintignore
+++ b/.eslintignore
@@ -3,6 +3,7 @@ lib/**
 node_modules/**
 test/lib/**
 playground/**
+src/uppy-react/**
 website/node_modules/**
 website/private_modules/hexo-renderer-uppyexamples/node_modules/**
 website/public/**
